--- a/teamt/app/src/main/res/layout/activity_main.xml
+++ b/teamt/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="net.iberro.teamt.MainActivity">
+    tools:context="net.iberro.teamt.MainActivity"
+    android:weightSum="1">
 
     <Button
         android:layout_width="wrap_content"
@@ -16,4 +17,20 @@
         android:text="get Stream Addr"
         android:id="@+id/button"
         android:onClick="login"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        android:id="@+id/button3"
+        android:layout_gravity="center_vertical"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stream Login"
+        android:id="@+id/button2"
+        android:layout_weight="0.17"
+        android:onClick="streamLogin"/>
 </LinearLayout>
