--- a/teamt/app/src/main/res/layout/activity_main.xml
+++ b/teamt/app/src/main/res/layout/activity_main.xml
@@ -18,30 +18,48 @@
         android:layout_weight="0.52"
         android:weightSum="1">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:onClick="dec"
+            android:text="-"
+            android:id="@+id/dec"/>
+
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText"
+            android:id="@+id/freq"
             android:layout_gravity="center_horizontal"
             android:text="0"
             android:gravity="center" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Connect"
-            android:id="@+id/button2"
-            android:layout_weight="0.00"
-            android:onClick="streamLogin"/>
+            android:layout_width="50dp"
+            android:layout_height="match_parent"
+            android:text="+"
+            android:onClick="inc"
+            android:id="@+id/inc"/>
+
+    </LinearLayout>
+
 
         <Button
-            android:layout_width="wrap_content"
+            android:layout_width="125dp"
             android:layout_height="wrap_content"
-            android:text="get Stream Addr"
-            android:id="@+id/button"
-            android:onClick="login"/>
+            android:text="Connect"
+            android:id="@+id/connect"
+            android:layout_weight="0.00"
+            android:onClick="connect"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"/>
 
         <LinearLayout
             android:orientation="vertical"
@@ -54,9 +72,10 @@
                 android:layout_width="133dp"
                 android:layout_height="wrap_content"
                 android:text="Send"
-                android:id="@+id/button3"
+                android:id="@+id/send"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="0.09" />
+                android:layout_weight="0.09"
+                android:enabled="false"/>
         </LinearLayout>
     </LinearLayout>
 
